kubernetes/apps/non-cluster-services/plex/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
spec:
  parentRefs:
  - name: internal
    namespace: kube-system
    sectionName: domain-5-subdomain-https
  hostnames:
  - "plex.${DOMAIN_5}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: plex
      port: 32400
